[tool.poetry]
name = "purlieu"
version = "0.1.0"
description = "Backend abstraction layer for LLM inference using PEP 544 protocols for structural subtyping."
authors = ["Wolfsauge <no@email>"]
license = "MIT"
readme = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
